--- a/src/app/usuario/usuario-login/usuario-login.component.html
+++ b/src/app/usuario/usuario-login/usuario-login.component.html
@@ -10,7 +10,7 @@
           </div>
           <div class="form-group">
               <label for="password"><b>Contraseña</b></label>
-              <input type="text" name="password" class="form-control" id="password" [(ngModel)]="usuario2.password" required>
+              <input type="password" name="password" class="form-control" id="password" [(ngModel)]="usuario2.password" required>
           </div>
           <div class="justify-content-center align-self-center">
               <button type="submit" class="btn btn-primary" >Login</button>
