Arreglo toast y varios

--- a/src/app/trayecto/listar-trayecto/listar-trayecto.component.html
+++ b/src/app/trayecto/listar-trayecto/listar-trayecto.component.html
@@ -37,5 +37,5 @@
   </tbody>
 </table>
 <div class="text-right">
-  	<button type="button" class="btn btn-primary" routerLink="/home">Volver</button>
+  	<button type="button" class="btn btn-primary" (click)="volver()" >Volver</button>
 </div>
