--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!-- Banner -->
 <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand"  routerLink="">
+        <a class="navbar-brand"  >
+        <button  class="btn btn-light"  (click)="reset()">
             <div class="form-inline">
                 <h2 class="mainTitle">Carpooling</h2>
             </div>
+        </button>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
