--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -12,55 +12,12 @@
       </div>
 -->
 
-<div class="row">
+<div class="">
   
-  <div class="col-sm-11">
-    <div class="row justify-content-center">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-            <a class="navbar-brand" href="#">
-                <img src="https://st2.depositphotos.com/5266903/8772/v/950/depositphotos_87725254-stock-illustration-avion-flat-icon.jpg" width="50" height="50" alt="">
-                CarPooling
-              </a>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" routerLink="/home">Trayectos</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Seguros</a>
-                    </li>
-                  
-                  </ul>
-                </div>
-
-        </nav>
-    </div>     
-  </div>
-  <div class="col-sm-1" >
-    
-      <div class="" *ngIf="usernameActual!='vacio'">
-        <button routerLink="/usuario/menu" class="btn btn-light" type="button">
-          <img class="img-profile img-circle img-responsive center-block" src="http://chittagongit.com//images/generic-user-icon/generic-user-icon-13.jpg" alt="50" width="50">
-         
-          <ul class="meta list list-unstyled">
-             
-              <li class="name" *ngIf="usuario">{{usuario.nombre}} <span class="badge badge-danger">4</span> 
-              </li>
-          </ul>
-         
-        </button>
-        
-      </div>
-        <div class=""   *ngIf="usernameActual ==='vacio'">
-           <button type="button" class=".btn-default." routerLink="/usuario/login">Iniciar sesión</button>
-      <button type="button" class="btn-default" routerLink="/usuario/create">Registrarse</button>
-        </div>
-    
-     </div>
-</div>
+  
 <div class="row justify-content-center">
     
-<div class="col-sm-9">
+<div class="col-sm-10">
     <br>
     <h2 class="text-center">Buscar Trayecto</h2>
     <br>
@@ -103,7 +60,7 @@
         <div id="collapse" class="collapse">
           <div class="form-group" id="form1">
           <label for="costo"><b>Costo</b></label>
-          <input type="search" name="costo" class="form-control" id="costo" [(ngModel)]="buscar.costo" placeholder="Ej: 1000$">
+          <input type="search" name="costo" class="form-control" id="costo" [(ngModel)]="buscar.costo" placeholder="Ej: 10000">
         </div>
       <div class="form-group" *ngIf="usuarios!=null">
           <label for="conductor"><b>Conductor</b></label>
@@ -169,12 +126,67 @@
         </div>
       
       </form>
+     
  </div>
-<div class="col-sm-1"></div>
- 
-
-
+ </div>
+<br>
+ <div class="row"> 
+   <div class="col-sm-12">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="background-color:#EBEBEB;">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="d-flex justify-content-center">
+                <div class="card" style="width: 18rem;" alt="First slide">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;" alt="Second slide">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+            </div>
+            <div class="carousel-item">
+                <div class="d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;" alt="Third slide">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      
+      
+   </div>
+   
 </div>
-
-
 
