Imagen agregada al proyecto

--- a/src/app/usuario/menu/menu.component.html
+++ b/src/app/usuario/menu/menu.component.html
@@ -6,7 +6,7 @@
                     <div class="module-inner">
                         <div class="side-bar">
                             <div class="user-info">
-                                <img class="img-profile img-circle img-responsive center-block" src="http://chittagongit.com//images/generic-user-icon/generic-user-icon-13.jpg" alt="">
+                                <img class="img-profile img-circle img-responsive center-block" src='../../../../generic-user-icon-13.jpg' alt="">
                                 <ul class="meta list list-unstyled">
                                     <li class="name" *ngIf="usuario">{{usuario.nombre}} {{usuario.apellido}}  
                                     </li>
