Correcion de errores en usuario

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -14,10 +14,12 @@
 
 <div class="">
   
-  
+<div class="bg"></div>
 <div class="row justify-content-center">
     
-<div class="col-sm-10">
+<div class="col-sm-10"   style="background-image: url(../../../../fondoTransparente.png);  background-repeat: no-repeat; background-size: cover; background-position: center center;">
+
+
     <br>
     <h2 class="text-center">Buscar Trayecto</h2>
     <br>
