--- a/src/app/usuario/usuario-notificaciones/usuario-notificaciones.component.html
+++ b/src/app/usuario/usuario-notificaciones/usuario-notificaciones.component.html
@@ -1,74 +1,290 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-<!--    <mat-card-title>Shiba Inu</mat-card-title> -->
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card>
-
-<!--<div class="container-fluid">   
-  <div class="row">
-    <div class="col" >
-      <h2>Notifiaciones recibidas</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Mensaje</th>
-            <th scope="col">Emisor</th>
-            <th scope="col">Receptor</th>
-            <th scope="col">Trayecto</th>
-            <th scope="col">leida</th>
-           </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor = "let notificacion of misNotificacionesRecibidas">
-                  <td>{{notificacion.id}}</td>
-                  <td>{{notificacion.mensaje}}</td>
-                  <td>{{notificacion.emisor}}</td>
-                  <td>{{notificacion.receptor}}</td>
-                  <td>{{notificacion.trayecto}}</td>
-                  <td>{{notificacion.leida}}</td>
-              </tr>
-        </tbody>
-      </table>
-      <h2>Notificaciones enviadas</h2>
-      <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Mensaje</th>
-              <th scope="col">Emisor</th>
-              <th scope="col">Receptor</th>
-              <th scope="col">Trayecto</th>
-              <th scope="col">leida</th>
-
-             </tr>
-          </thead>
-          <tbody>
-              <tr *ngFor = "let notificacion of misNotificacionesEnviadas">
-                    <td>{{notificacion.id}}</td>
-                    <td>{{notificacion.mensaje}}</td>
-                    <td>{{notificacion.emisor.nombre}}</td>
-                    <td>{{notificacion.receptor.nombre}}</td>
-                    <td> Trayecto #{{notificacion.trayecto.id}}</td>
-                    <td>{{notificacion.leida}}</td>
-                </tr>
-          </tbody>
-        </table>
+<h4>Notificaciones nuevas:</h4>
+<div class="container" *ngFor="let notificacion of noLeidasRecibidas">
+  <mat-card>
+    <div class="box">
+      <div class="col-2">
+        <img
+          src="../../../../carritoImagen.png"
+          width="100%"
+          class="img-rounded"
+          vertical-align="middle"
+          alt="Icono"
+        />
+      </div>
+      <div class="col-8" text-align="center">
+        <div class="" *ngIf="notificacion.tipo == 1">
+          <div id="mensaje" class="row">
+            Enviada por:
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              {{ notificacion.emisor.nombre }}
+            </a>
+          </div>
+          <div class="row">
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.trayecto.id]'
+              ]"
+              >{{ notificacion.emisor.nombre }}</a
+            >
+            quiere suscribirse al
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              trayecto con id {{ notificacion.trayecto.id }}</a
+            >
+          </div>
+          <div class="row">
+            {{ notificacion.fecha }}
+          </div>
+        </div>
+        <div class="" *ngIf="notificacion.tipo == 2">
+          <div id="mensaje" class="row">
+            Enviada por:
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              {{ notificacion.emisor.nombre }}
+            </a>
+          </div>
+          <div class="row">
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.trayecto.id]'
+              ]"
+              >{{ notificacion.emisor.nombre }}</a
+            >
+            {{ notificacion.mensaje }} su solicitud de cupo para el
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              trayecto con id {{ notificacion.trayecto.id }}</a
+            >
+          </div>
+          <div class="row">
+            {{ notificacion.fecha }}
+          </div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="" *ngIf="notificacion.tipo == 1">
+          <mat-card-actions>
+            <div class="row">
+              <button
+                mat-button
+                (click)="
+                  agregarAUnPasajero(
+                    notificacion.trayecto,
+                    notificacion.emisor,
+                    notificacion
+                  )
+                "
+              >
+                Aceptar
+              </button>
+            </div>
+            <div class="row">
+              <button
+                mat-button
+                (click)="
+                  rechazarAUnPasajero(
+                    notificacion.trayecto,
+                    notificacion.emisor,
+                    notificacion
+                  )
+                "
+              >
+                Rechazar
+              </button>
+            </div>
+          </mat-card-actions>
+        </div>
+        <div class="" *ngIf="notificacion.tipo == 2">
+          <mat-card-actions>
+            <button mat-button (click)="marcarComoLeida(notificacion)">
+              Marcar como leída
+            </button>
+          </mat-card-actions>
+        </div>
+      </div>
     </div>
-  </div>
-</div>-->
+  </mat-card>
+</div>
 
+<h4>Notificaciones antiguas:</h4>
+<div class="container" *ngFor="let notificacion of leidasRecibidas">
+  <mat-card>
+    <div class="box">
+      <div class="col-2">
+        <img
+          src="../../../../carritoImagen.png"
+          width="100%"
+          class="img-rounded"
+          vertical-align="middle"
+          alt="Icono"
+        />
+      </div>
+      <div class="col-8" text-align="center">
+        <div class="" *ngIf="notificacion.tipo == 1">
+          <div id="mensaje" class="row">
+            Enviada por:
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              {{ notificacion.emisor.nombre }}
+            </a>
+          </div>
+          <div class="row">
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.trayecto.id]'
+              ]"
+              >{{ notificacion.emisor.nombre }}</a
+            >
+            quiere suscribirse al
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              trayecto con id {{ notificacion.trayecto.id }}</a
+            >
+          </div>
+          <div class="row">
+            {{ notificacion.fecha }}
+          </div>
+        </div>
+        <div class="" *ngIf="notificacion.tipo == 2">
+          <div id="mensaje" class="row">
+            Enviada por:
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              {{ notificacion.emisor.nombre }}
+            </a>
+          </div>
+          <div class="row">
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.trayecto.id]'
+              ]"
+              >{{ notificacion.emisor.nombre }}</a
+            >
+            {{ notificacion.mensaje }} su solicitud de cupo para el
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              trayecto con id {{ notificacion.trayecto.id }}</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-2">
+        <mat-card-actions>
+          <button mat-button (click)="eliminarNotificacion(notificacion)">
+            Eliminar
+          </button>
+        </mat-card-actions>
+      </div>
+    </div>
+  </mat-card>
+</div>
+
+<div class="container" *ngFor="let notificacion of misNotificacionesEnviadas">
+  <mat-card>
+    <div class="box">
+      <div class="col-2">
+        <img
+          src="../../../../carritoImagen.png"
+          width="100%"
+          class="img-rounded"
+          vertical-align="middle"
+          alt="Icono"
+        />
+      </div>
+      <div class="col-8" text-align="center">
+        <div class="" *ngIf="notificacion.tipo == 1">
+          <div id="mensaje" class="row">
+            Enviada a:
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              {{ notificacion.emisor.nombre }}
+            </a>
+          </div>
+          <div class="row">
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.trayecto.id]'
+              ]"
+              >{{ notificacion.emisor.nombre }}</a
+            >
+            quiere suscribirse al
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              trayecto con id {{ notificacion.trayecto.id }}</a
+            >
+            <div class="row">
+              {{ notificacion.fecha }}
+            </div>
+          </div>
+        </div>
+        <div class="" *ngIf="notificacion.tipo == 2">
+          <div id="mensaje" class="row">
+            Enviada a:
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              {{ notificacion.emisor.nombre }}
+            </a>
+          </div>
+          <div class="row">
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.trayecto.id]'
+              ]"
+              >{{ notificacion.emisor.nombre }}</a
+            >
+            {{ notificacion.mensaje }} su solicitud de cupo para el
+            <a
+              [routerLink]="[
+                'usuruario/buscarEspecifico/[notificacion.emisor.nombre]'
+              ]"
+            >
+              trayecto con id {{ notificacion.trayecto.id }}</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-2">
+        <mat-card-actions>
+          <button mat-button (click)="eliminarNotificacion(notificacion)">
+            Eliminar
+          </button>
+        </mat-card-actions>
+      </div>
+    </div>
+  </mat-card>
+</div>
