--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,17 +1,3 @@
-
-
-
-  <!-- 
-  <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-      <a routerLink="/home">Trayectos</a>
-      <a routerLink="/pestaña-trayecto">Información Trayectos</a>
-    </div>
-    <div id="main" class="col-sm-2">
-        <span style="font-size:30px;cursor:pointer" (click)="openNav()">&#9776; Menu </span>
-      </div>
--->
-
 <div class="">
   
   
@@ -36,7 +22,8 @@
         </div>
       </div>
       </div>
-      
+      <div class="row">
+        <div class="col-sm-6">
         <div class="form-group" *ngIf="ciudades!=null">
           <label for="origen"><b>Origen</b></label>
           <select class="form-control" name="origen" form="search"   ng-Model="buscar.origen" >
@@ -44,7 +31,8 @@
             <option *ngFor = "let ciudad of ciudades" value = {{ciudad.nombre}} >{{ciudad.nombre}}</option>
           </select>
         </div>
-
+      </div>
+      <div class="col-sm-6">
         <div class="form-group" *ngIf="ciudades!=null">
           <label for="destino"><b>Destino</b></label>
           <select class="form-control" name="destino" form="search"   ng-Model="buscar.destino" >
@@ -52,7 +40,8 @@
               <option *ngFor = "let ciudad of ciudades" value = {{ciudad.nombre}} >{{ciudad.nombre}}</option>
           </select>
         </div>
-            
+      </div>
+      </div>    
        
         <a class="badge badge-pill badge-primary" data-toggle="collapse" href="#collapse" role="button" aria-expanded="false" aria-controls="collapseExample" toggle="false">
             Mas Opciones
@@ -133,48 +122,31 @@
  <div class="row"> 
    <div class="col-sm-12">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="background-color:#EBEBEB;">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
+          
           <div class="carousel-inner">
-            <div class="carousel-item active">
+              <div class="carousel-item active">
+                  <div class="d-flex justify-content-center">
+                      <div class="card" style="width: 18rem;"  alt="First slide">
+                          <img class="card-img-top" src="https://http2.mlstatic.com/montable-electrico-mercedes-benz-injusa-6v-auto-carro-nino-D_NQ_NP_839208-MLM26835805673_022018-F.webp" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Carpooling</h5>
+                            <p class="card-text">Trayectos a toda colombia y al mejor precio :3(CAMBIAR DESPUES XD)</p>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+            <div class="carousel-item" *ngFor="let i of ciudades">
               <div class="d-flex justify-content-center">
-                <div class="card" style="width: 18rem;" alt="First slide">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card" style="width: 18rem;"  alt="First slide">
+                    <img class="card-img-top" src="https://www.viajejet.com/wp-content/viajes/paisaje-marino-lago-jackson.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Trayectos a {{i.nombre}}</h5>
+                      <p class="card-text">Todos los trayectos que parten a {{i.nombre}}</p>
+                      <button type="button" class="btn btn-primary" (click)="buscara(i)" >Buscar Ya</button>
                     </div>
                   </div>
                 </div>
             </div>
-            <div class="carousel-item">
-                <div class="d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;" alt="Second slide">
-                        <img class="card-img-top" src="..." alt="Card image cap">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                    </div>
-            </div>
-            <div class="carousel-item">
-                <div class="d-flex justify-content-center">
-                    <div class="card" style="width: 18rem;" alt="Third slide">
-                        <img class="card-img-top" src="..." alt="Card image cap">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                    </div>
-          </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" >
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
