--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,12 +39,12 @@
             {{ usuario.nombre }}
           </div>
           <div class="col-sm-1  my-auto">
-            <span class="badge badge-danger">4</span>
+            <span class="badge badge-danger">{{notificacionesPendientes}}</span>
           </div>
           <div class="col-sm-2">
             <img
               class=""
-              src="http://chittagongit.com//images/generic-user-icon/generic-user-icon-13.jpg"
+              src="../../generic-user-icon-13.jpg"
               alt="50"
               width="50"
             />
