Auto stash before merge of "master" and "origin/master"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="#">Crear Trayecto</a>
                 <a class="dropdown-item" routerLink="/home">Buscar Trayecto</a>
-                <a class="dropdown-item" href="#">Mis trayectos</a>
+                <a class="dropdown-item" href="trayecto/mis-trayectos/">Mis trayectos</a>
               </div>
             </li>
             <li class="nav-item dropdown">
